Navbox lookin good ;)

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 
 	<body>
 		<div class="navbox-wrap">
+			<div class="main-logo-wrap">
+				<div class="logo">
+				
+				</div>
+			</div>
 			<ul class="navbox">
-				<li>My Energy Consumption</li>
+				<li class="active">My Energy Consumption</li>
 				<li>Analysis of my results</li>
+				<li>How do I compare?</li>
 				<li>How to reduce my consumption</li>
+				<li>References</li>
 			</ul>
 		</div>
 		<div class="content-wrap">
