--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 				</div>
 			</div>
 			<ul class="navbox">
-				<li class="active">My carbon emission</li>
+				<li class="active">My carbon emissions</li>
 				<li>Analysis of my results</li>
 				<li>How do I compare?</li>
-				<li>How to reduce my consumption</li>
+				<li>How to reduce my emissions?</li>
 				<li>References</li>
 			</ul>
 		</div>
@@ -35,16 +35,16 @@
 						<tr>
 							<td>
 								<select id="applianceType">
-									<option value="fridgefreezer">Fridge/Freezer</option>
-									<option value="airconditioner">Airconditioner</option>
+									<option value="airconditioner">Air conditioner</option>
 									<option value="clothesdryer">Clothes dryer</option>
 									<option value="computormonitors">Computor monitor</option>
 									<option value="dishwashers">Dishwasher</option>
+									<option value="fridgefreezer">Fridge/Freezer</option>
 									<option value="television">Television</option>
 								</select>
 							</td>
 							<td><input type="text" value="Select model"></input></td>
-							<td><a href="javascript:void(0);">Use energy stars</a></td>
+							<td><a href="javascript:void(0);">or use energy stars</a></td>
 							<td></td>
 						</tr>
 					</table>
@@ -53,7 +53,7 @@
 				<div class="results">
 					<div class="temperature">
 						<div>If everyone had the same appliances as me, the effect on the global temperature is</div>
-						<div id="tempValue">0.00*</div>
+						<div id="tempValue">0.00°c</div>
 					</div>
 					<div id="showbox">
 						##CONTENT##
