--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<ul class="navbox">
 				<li class="active">My carbon emissions</li>
-				<li class="navigable">Analysis of my results</li>
+				<li>Analysis of my results</li>
 				<li>How do I compare?</li>
 				<li>How to reduce my emissions?</li>
 				<li>References</li>
