--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Toasty</title>
+		<title>Toastie</title>
 		<link href="css/layout.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 		<script type="text/javascript" src="js/interactive.js"></script>
